--- a/public/static-sites/get/rate.html
+++ b/public/static-sites/get/rate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rate MyTonWallet</title>
+    <title>Rate Gasless</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -11,12 +11,12 @@
     <div class="logo-container">
         <div class="logo mytonwallet-logo"></div>
     </div>
-    <h1>Rate MyTonWallet</h1>
+    <h1>Rate Gasless</h1>
     <p>
         ⭐⭐⭐⭐⭐
     </p>
     <p>
-        Like MyTonWallet? Support us with a 5-star rating on a store page.
+        Like Gasless? Support us with a 5-star rating on a store page.
     </p>
     <a
             id="rate-app-store"
@@ -64,7 +64,7 @@
             target="_blank"
             class="download-btn single non-store hidden"
     >
-        Rate on TON App
+        Rate on Ton App
     </a>
     <div class="footer">
         <div class="version">&nbsp;</div>
